# knowledge-base-test

./: .gitignore  README.md
knowledge-base-rag/: pyproject.toml
knowledge-base-rag/src/rag/: rag.py
knowledge-base-rag/src/rag/vector_db_providers/: __init__.py  init_vector_db.py  qdrant.py
knowledge-base-rag/src/utils/: manifest_update_handler.py
knowledge-base-rag/tests/: index_documents.py  test_rag.py
manifest/: manifest.txt
qdrant_data/: raft_state.json
qdrant_data/collections/text_documents/0/: newest_clocks.json  replica_state.json
qdrant_data/collections/text_documents/0/segments/85beb074-761a-429d-8565-f07111e63705/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_data/collections/text_documents/0/segments/a85f7308-c777-404b-8153-6f2bc39cb302/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_data/collections/text_documents/0/segments/aaecc6c2-c5b6-499b-8767-c0bd49705449/: mutable_id_tracker.mappings
qdrant_data/collections/text_documents/0/segments/aaecc6c2-c5b6-499b-8767-c0bd49705449/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_data/collections/text_documents/0/segments/f2cd1e0e-e124-4e20-9935-74ef62c83b30/payload_index/: IDENTITY  LOG  MANIFEST-000005
